# ads1256-quad-hybrid

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
docs/: ACQUISITION.md  ARCHITECTURE.md  CONFIGURATION.md  PERFORMANCE.md  ROADMAP.md  TESTING.md
examples/: basic_quad_test.py  hw_thread_read.py
src/ads1256_core/: ads1256_error.c  ads1256_error.h  ads1256_gpio.c  ads1256_log.c  ads1256_ring.c  ads1256_spi.c  ads1256_system.c
src/ads1256_core/include/ads1256_core/: ads1256_error.h  ads1256_frame.h  ads1256_gpio.h  ads1256_log.h  ads1256_metrics.h  ads1256_regs.h  ads1256_ring.h  ads1256_spi.h  ads1256_system.h  ads1256_types.h
src/ads1256_quad_api/: __init__.py  _core.pxd  _core.pyx  system.py
tests/: test_import.py  test_metrics.py
